--- a/src/gearshare-frontend/package.json
+++ b/src/gearshare-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
+    "react-datetime-picker": "^7.0.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4"
   },
