--- a/src/gearshare/Dockerfile
+++ b/src/gearshare/Dockerfile
@@ -11,4 +11,4 @@ FROM eclipse-temurin:17-jre
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-Djava.net.preferIPv4Stack=true", "-jar", "app.jar"]
