--- a/src/gearshare/src/main/resources/application.properties
+++ b/src/gearshare/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.security.oauth2.client.registration.google.redirect-uri=${BACKEND_URL}/lo
 
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.max-age=3600
+server.port=${PORT:8080}
+
 
 #server.servlet.session.cookie.same-site=Lax
 #server.servlet.session.cookie.secure=false
