--- a/src/gearshare/src/main/resources/application.properties
+++ b/src/gearshare/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
+spring.datasource.username=postgres.ezrlluuizpbtqcjtkuhu
 spring.datasource.password=${DATABASE_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.application.name=gearshare
