--- a/src/gearshare/src/main/resources/application.properties
+++ b/src/gearshare/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=postgres.ezrlluuizpbtqcjtkuhu
-spring.datasource.password=${DATABASE_PASS}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.application.name=gearshare
 
