--- a/src/gearshare/src/main/resources/application.properties
+++ b/src/gearshare/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.application.name=gearshare
 
 spring.jpa.properties.hibernate.physical_naming_strategy=com.gearshare.gearshare.config.LowerCaseNamingStrategy
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.orm.mapping=DEBUG
 spring.sql.init.mode=always
